--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </svg>
                 </div>
                 <h1><a href="index.html">iizii.io</a></h1>
-                <p>Blah blahhh, blah blah bladh awuhdeb.</p>
+                <p>Creating software that make difficult business problems easy</p>
               </div>
 
           </div>
@@ -87,12 +87,12 @@
         <div id="intro-wrapper" class="wrapper style1">
           <div class="title">The Introduction</div>
           <section id="intro" class="container">
-            <p class="style1">So in case you were wondering what this is all about ...</p>
+            <p class="style1">Here’s all the cool things we can do for you</p>
             <p class="style2">
-              This is a site that will give you more information<br class="mobile-hide" />
-              about what we do. Ready to go? <a href="#footer" class="nobr">DROP US A NOTE!</a>
+              If you already know how awesome we are &hellip;<br class="mobile-hide" />
+              Ready to work with us? <a href="#footer" class="nobr">DROP US A NOTE!</a>
             </p>
-            <p class="style3">This site is <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>, so use it for any of your personal or commercial projects!</p>
+            <!-- <p class="style3">This site is <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>, so use it for any of your personal or commercial projects!</p> -->
             <ul class="actions">
               <li><a href="#main" class="button style3 big">Proceed</a></li>
             </ul>
@@ -112,49 +112,77 @@
             <!-- Features -->
               <section id="features">
                 <header class="style1">
-                  <h2>Dolor consequat feugiat amet veroeros</h2>
-                  <p>Feugiat dolor nullam orci pretium phasellus justo</p>
+                  <h2>Full service technology consulting</h2>
+                  <p>We learn your business flow and identify the gaps that kill efficiency.</p>
                 </header>
                 <div class="feature-list">
                   <div class="row">
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
+                        <h3 class="icon fa-comment">Transparent Communications</h3>
+                        <p>We will help you get the most efficiency out of your team, whether that’s improving your internal communication practices, or optimizing your development workflows. We’re efficiency experts.</p>
                       </section>
                     </div>
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-refresh">Lorem ipsum dolor sit veroeros</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
-                      </section>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="6u 12u(mobile)">
-                      <section>
-                        <h3 class="icon fa-picture-o">Pretium phasellus justo lorem</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
-                      </section>
-                    </div>
-                    <div class="6u 12u(mobile)">
-                      <section>
-                        <h3 class="icon fa-cog">Tempus sed pretium orci</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
+                        <h3 class="icon fa-refresh">Refreshed and up to date on best practices and new technology</h3>
+                        <ul>
+                          <li>Web VR</li>
+                          <li>Machine Learning</li>
+                          <li>Natural Language Processing</li>
+                          <li>Cartech</li>
+                          <li>Wearables and IOT devices</li>
+                          <li>Javascript CMSs</li>
+                          <li>Drupal Development and api creation</li>
+                        </ul>
                       </section>
                     </div>
                   </div>
                   <div class="row">
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-wrench">Aliquam consequat et feugiat</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
+                        <h3 class="icon fa-picture-o">Media rich, beautiful design</h3>
+                        <ul>
+                          <li>Atomic Component Driven Design</li>
+                          <li>UX Optimization and Heat Mapping</li>
+                          <li>Mobile friendly user experience</li>
+                        </ul>
                       </section>
                     </div>
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-check">Dolore laoreet aliquam mattis</h3>
-                        <p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate. Eget mattis at, laoreet vel velit lorem.</p>
+                        <h3 class="icon fa-cog">Full service technology consulting</h3>
+                        <ul>
+                          <li>Data API integrations</li>
+                          <li>Software and Hardware integration</li>
+                          <li>JavaScript and CMS design/building</li>
+                          <li>Drupal 8+ Architecture consultation</li>
+                        </ul>
+                      </section>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="6u 12u(mobile)">
+                      <section>
+                        <h3 class="icon fa-wrench">Adjustable services to meet individual needs</h3>
+                        <ul>
+                          <li>Architecture Consulting</li>
+                          <li>Content Management Workflows</li>
+                          <li>Design and Branding</li>
+                          <li>SEO and Marketing</li>
+                        </ul>
+                      </section>
+                    </div>
+                    <div class="6u 12u(mobile)">
+                      <section>
+                        <h3 class="icon fa-check">Software we enjoy!</h3>
+                        <ul>
+                          <li>Angular</li>
+                          <li>Drupal</li>
+                          <li>Jekyll/Hugo</li>
+                          <li>Kiosk/Web Apps</li>
+                          <li>E-Commerce</li>
+                        </ul>
                       </section>
                     </div>
                   </div>
@@ -169,7 +197,7 @@
         </div>
 
       <!-- Highlights -->
-        <div class="wrapper style3">
+        <!-- <div class="wrapper style3">
           <div class="title">The Endorsements</div>
           <div id="highlights" class="container">
             <div class="row 150%">
@@ -205,17 +233,17 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       <!-- Footer -->
         <div id="footer-wrapper" class="wrapper">
           <div class="title">The Rest Of It</div>
           <div id="footer" class="container">
             <header class="style1">
-              <h2>Ipsum sapien elementum portitor?</h2>
+              <h2>Let us help you now!</h2>
               <p>
-                Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-                Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.
+                It’s our goal to help you! We want to bring our expertise to your projects,<br />
+                let us know how we can plug in.
               </p>
             </header>
             <hr />
@@ -256,22 +284,19 @@
                   <section class="feature-list small">
                     <div class="row">
                       <div class="6u 12u(mobile)">
-                        <section>
+                        <!-- <section>
                           <h3 class="icon fa-home">Mailing Address</h3>
-                          <p>
-                            Untitled Corporation<br />
-                            1234 Somewhere Rd #987<br />
-                            Nashville, TN 00000-0000
-                          </p>
-                        </section>
+                          <p></p>
+                        </section> -->
                       </div>
                       <div class="6u 12u(mobile)">
                         <section>
                           <h3 class="icon fa-comment">Social</h3>
                           <p>
-                            <a href="#">@untitled-corp</a><br />
+                            <a href="https://twitter.com/iiziiio">@iiziiio</a>
+                            <!-- <br />
                             <a href="#">linkedin.com/untitled</a><br />
-                            <a href="#">facebook.com/untitled</a>
+                            <a href="#">facebook.com/untitled</a> -->
                           </p>
                         </section>
                       </div>
@@ -281,7 +306,7 @@
                         <section>
                           <h3 class="icon fa-envelope">Email</h3>
                           <p>
-                            <a href="#">info@untitled.tld</a>
+                            <a href="mailto:hello@iizii.io">hello@iizii.io</a>
                           </p>
                         </section>
                       </div>
@@ -289,7 +314,7 @@
                         <section>
                           <h3 class="icon fa-phone">Phone</h3>
                           <p>
-                            (000) 555-0000
+                            (828) 357-7122
                           </p>
                         </section>
                       </div>
