feat: Update details section
 * Add header image of vintage Xerox
 * Add visual and layout style for unordered lists

@todo
 * reformat footer to account for removal of the "mailing address" section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="style1">Here’s all the cool things we can do for you</p>
             <p class="style2">
               If you already know how awesome we are &hellip;<br class="mobile-hide" />
-              Ready to work with us? <a href="#footer" class="nobr">DROP US A NOTE!</a>
+              Ready to work with us? <a href="#footer-wrapper" class="nobr">DROP US A NOTE!</a>
             </p>
             <!-- <p class="style3">This site is <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>, so use it for any of your personal or commercial projects!</p> -->
             <ul class="actions">
@@ -106,7 +106,7 @@
 
             <!-- Image -->
               <a href="#" class="image featured">
-                <img src="images/pic01.jpg" alt="" />
+                <img src="images/old_xerox.jpg" alt="" />
               </a>
 
             <!-- Features -->
@@ -119,14 +119,14 @@
                   <div class="row">
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-comment">Transparent Communications</h3>
+                        <h3 class="icon fa-comment">Transparent communications</h3>
                         <p>We will help you get the most efficiency out of your team, whether that’s improving your internal communication practices, or optimizing your development workflows. We’re efficiency experts.</p>
                       </section>
                     </div>
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-refresh">Refreshed and up to date on best practices and new technology</h3>
-                        <ul>
+                        <h3 class="icon fa-refresh">Best practices and new technology</h3>
+                        <ul class="style4">
                           <li>Web VR</li>
                           <li>Machine Learning</li>
                           <li>Natural Language Processing</li>
@@ -142,7 +142,7 @@
                     <div class="6u 12u(mobile)">
                       <section>
                         <h3 class="icon fa-picture-o">Media rich, beautiful design</h3>
-                        <ul>
+                        <ul class="style4">
                           <li>Atomic Component Driven Design</li>
                           <li>UX Optimization and Heat Mapping</li>
                           <li>Mobile friendly user experience</li>
@@ -152,7 +152,7 @@
                     <div class="6u 12u(mobile)">
                       <section>
                         <h3 class="icon fa-cog">Full service technology consulting</h3>
-                        <ul>
+                        <ul class="style4">
                           <li>Data API integrations</li>
                           <li>Software and Hardware integration</li>
                           <li>JavaScript and CMS design/building</li>
@@ -164,8 +164,8 @@
                   <div class="row">
                     <div class="6u 12u(mobile)">
                       <section>
-                        <h3 class="icon fa-wrench">Adjustable services to meet individual needs</h3>
-                        <ul>
+                        <h3 class="icon fa-wrench">Variable services for discrete needs</h3>
+                        <ul class="style4">
                           <li>Architecture Consulting</li>
                           <li>Content Management Workflows</li>
                           <li>Design and Branding</li>
@@ -176,7 +176,7 @@
                     <div class="6u 12u(mobile)">
                       <section>
                         <h3 class="icon fa-check">Software we enjoy!</h3>
-                        <ul>
+                        <ul class="style4">
                           <li>Angular</li>
                           <li>Drupal</li>
                           <li>Jekyll/Hugo</li>
@@ -188,8 +188,8 @@
                   </div>
                 </div>
                 <ul class="actions actions-centered">
-                  <li><a href="#" class="button style1 big">Get Started</a></li>
-                  <li><a href="#" class="button style2 big">More Info</a></li>
+                  <li><a href="#footer-wrapper" class="button style1 big">Get Started</a></li>
+                  <!-- <li><a href="#" class="button style2 big">More Info</a></li> -->
                 </ul>
               </section>
 
