minor content updates to header and details section.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </svg>
                 </div>
                 <h1><a href="index.html">iizii.io</a></h1>
-                <p>Creating software that make difficult business problems easy</p>
+                <!-- <p>Creating software that make difficult business problems easy</p> -->
               </div>
 
           </div>
@@ -87,10 +87,11 @@
         <div id="intro-wrapper" class="wrapper style1">
           <div class="title">The Introduction</div>
           <section id="intro" class="container">
-            <p class="style1">Here’s all the cool things we can do for you</p>
+            <!-- <p class="style1">Here’s all the cool things we can do for you</p> -->
+            <p class="style1">Creating software that make difficult business problems easy</p>
             <p class="style2">
               If you already know how awesome we are &hellip;<br class="mobile-hide" />
-              Ready to work with us? <a href="#footer-wrapper" class="nobr">DROP US A NOTE!</a>
+              Ready to work with us? <a href="#footer-wrapper" class="nobr">Drop us a note!</a>
             </p>
             <!-- <p class="style3">This site is <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>, so use it for any of your personal or commercial projects!</p> -->
             <ul class="actions">
